feat(project): implement persistence and mapping logic